# Project_Alpha

./: AchievementNotifier.cpp  AchievementNotifier.h  AchievementScreen.cpp  AchievementScreen.h  Aggro.cpp  Aggro.h  Animation.cpp  Animation.h  Archer.cpp  Archer.h  Attack.cpp  Attack.h  Badge.cpp  Badge.h  Bike.cpp  Bike.h  Boss.cpp  Boss.h  Bullet.cpp  Bullet.h  CMakeCache.txt  CMakeLists.txt  Camera.cpp  Camera.h  Catch.cpp  Catch.h  CharacterFactory.cpp  CharacterFactory.h  Checkpoint.cpp  Checkpoint.h  Chest.cpp  Chest.h  Classes.cpp  Classes.h  Coin.cpp  Coin.h  Collision.cpp  Collision.h  Context.cpp  Context.h  (+103 more)
Achievements/: Achievement.cpp  Achievement.h  FirstBlood.cpp  FirstBlood.h  FirstDeath.cpp  FirstDeath.h  PotionAchievement.cpp  PotionAchievement.h
Box2D/: CMakeLists.txt
GameManager/: AssetManager.cpp  AssetManager.h  AssetManager.hpp  DEFINITIONS.hpp  Game.cpp  Game.hpp  InputManager.cpp  InputManager.hpp
GameStates/: GameLostState.cpp  GameLostState.h  GameOverState.cpp  GameOverState.hpp  GameState.cpp  GameState.h  GameState.hpp  GameWinState.cpp  GameWinState.h  MainMenuState.cpp  MainMenuState.hpp  MenuHomeState.cpp  MenuHomeState.h  MenuPauseState.cpp  MenuPauseState.h  PauseState.cpp  PauseState.hpp  SelectBikeState.cpp  SelectBikeState.h  SelectClassState.cpp  SelectClassState.h  SelectLevelState.cpp  SelectLevelState.h  ShopState.cpp  ShopState.h  SplashState.cpp  SplashState.hpp  State.h  State.hpp  StateMachine.cpp  StateMachine.h  StateMachine.hpp
Game_Screens/: AchievementScreen.cpp  AchievementScreen.h  DeathScreen.cpp  DeathScreen.h  EndScreen.cpp  EndScreen.h  Menu.cpp  Menu.h  NextLevelScreen.cpp  NextLevelScreen.h  Pause.cpp  Pause.h
Google_tests/: CMakeLists.txt  TestCollision.cpp  TestLevelManager.cpp  TestObjects.cpp  TestStrategyEnemy.cpp
Google_tests/lib/googlemock/docs/: cheat_sheet.md
Google_tests/lib/googletest/include/gtest/internal/: gtest-port.h
Google_tests/lib/googletest/src/: gtest-death-test.cc  gtest-port.cc
Levels/: Level1
Levels_Google_Test/: Level2_t_corrupted
Project_Alpha/: Archer.cpp  Archer.h  Boss.h  CMakeLists.txt  Chest.h  Enemy.cpp  Enemy.h  GameCharacter.cpp  GameCharacter.h  Hero.cpp  Hero.h  Item.cpp  Item.h  Knight.cpp  Knight.h  Mage.cpp  Mage.h  Tile.h  Weapon.cpp  Weapon.h  main.cpp
Project_Alpha/test/: CMakeLists.txt  GameCharacterTest.cpp  Makefile  cmake_install.cmake
Project_Alpha/test/lib/googletest/: CMakeLists.txt  Makefile  cmake_install.cmake  gtest.cbp
Project_Alpha/test/lib/googletest/test/: gtest_xml_outfiles_test.py
ResourceManager/: BikeFactory.cpp  BikeFactory.h  LevelFactory.cpp  LevelFactory.h  Resource.cpp  Resource.h  ResourceFont.cpp  ResourceFont.h  ResourceManager.cpp  ResourceManager.h  ResourceManagerException.cpp  ResourceManagerException.h  ResourceMap.cpp  ResourceMap.h  ResourceTexture.cpp  ResourceTexture.h
Resources/Map/: map.txt
StateMachine/: State.cpp  State.h  StateManager.cpp  StateManager.h  State_Achievement.cpp  State_Achievement.h  State_Achivement.cpp  State_Achivement.h  State_Death.cpp  State_Death.h  State_End.cpp  State_End.h  State_Level.cpp  State_Level.h  State_Main.cpp  State_Main.h  State_NextLevel.cpp  State_NextLevel.h  State_Pause.cpp  State_Pause.h
resources/data/: bikes.data
resources/maps/: level1.map  level2.map  level3.map  level4.map  test.map
test/: BikeFixture.cpp  BikeTest.cpp  CMakeLists.txt  CollisionTest.cpp  EnemyTest.cpp  GameEngineFixture.cpp  GameEngineTest.cpp  HeroTest.cpp  ItemTest.cpp  MapFixture.cpp  MapTest.cpp  PlayerFixture.cpp  PlayerTest.cpp  ResourceManagerFixture.cpp  ResurceManagerTest.cpp  RunAllTest.cpp  runAllTests.cpp  test.cpp
test/lib/googlemock/src/: gmock-matchers.cc
test/lib/googletest/src/: gtest-port.cc  gtest.cc
textures/: cart.psd
